// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charts/Bubble Chart Gradient smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="450"
     height="450"
     style="height: 450px; width: 450px;"
>
  <svg width="450"
       height="450"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(10, 10)">
      <g opacity="1"
         transform-origin="105.91110229492188px 134.15582275390625px"
         style="transform: none; transform-origin: 105.911px 134.156px;"
      >
        <circle id="gradient_series_AWS_bubble-bubble"
                fill="url(#gradient-gradient_series_AWS_bubble)"
                tabindex="0"
                aria-label="AWS: 100"
                role="graphics-document"
                r="107.42034470251065"
                cx="120.09717456604396"
                cy="170.891309886955"
        >
        </circle>
        <linearGradient spreadmethod="pad"
                        id="gradient-gradient_series_AWS_bubble"
                        x1="10%"
                        x2="10%"
                        y1="100%"
                        y2="0%"
        >
          <stop offset="0%"
                stop-opacity="0.3"
                stop-color="#2d60e8"
          >
          </stop>
          <stop offset="80%"
                stop-opacity="1"
                stop-color="#2d60e8"
          >
          </stop>
        </linearGradient>
        <text id="gradient_series_AWS_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(120.097px) translateY(170.891px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            AWS
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="172.49310302734375px 116.47554016113281px"
         style="transform: none; transform-origin: 172.493px 116.476px;"
      >
        <circle id="gradient_series_SendGrid_bubble-bubble"
                fill="url(#gradient-gradient_series_SendGrid_bubble)"
                tabindex="0"
                aria-label="SendGrid: 45"
                role="graphics-document"
                r="72.05975787638198"
                cx="302.5045420309472"
                cy="170.891309886955"
        >
        </circle>
        <linearGradient spreadmethod="pad"
                        id="gradient-gradient_series_SendGrid_bubble"
                        x1="10%"
                        x2="10%"
                        y1="100%"
                        y2="0%"
        >
          <stop offset="0%"
                stop-opacity="0.3"
                stop-color="#2c77e0"
          >
          </stop>
          <stop offset="80%"
                stop-opacity="1"
                stop-color="#2c77e0"
          >
          </stop>
        </linearGradient>
        <text id="gradient_series_SendGrid_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(302.505px) translateY(170.891px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            SendGrid
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="162.7693328857422px 206.30364990234375px"
         style="transform: none; transform-origin: 162.769px 206.304px;"
      >
        <circle id="gradient_series_Okta_bubble-bubble"
                fill="url(#gradient-gradient_series_Okta_bubble)"
                tabindex="0"
                aria-label="Okta: 75"
                role="graphics-document"
                r="93.02874739565539"
                cx="247.29897542739963"
                cy="329.57856343235886"
        >
        </circle>
        <linearGradient spreadmethod="pad"
                        id="gradient-gradient_series_Okta_bubble"
                        x1="10%"
                        x2="10%"
                        y1="100%"
                        y2="0%"
        >
          <stop offset="0%"
                stop-opacity="0.3"
                stop-color="#2b8dd8"
          >
          </stop>
          <stop offset="80%"
                stop-opacity="1"
                stop-color="#2b8dd8"
          >
          </stop>
        </linearGradient>
        <text id="gradient_series_Okta_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(247.299px) translateY(329.579px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Okta
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="137.93960571289062px 51.141029357910156px"
         style="transform: none; transform-origin: 137.94px 51.141px;"
      >
        <circle id="gradient_series_Twillo_bubble-bubble"
                fill="url(#gradient-gradient_series_Twillo_bubble)"
                tabindex="0"
                aria-label="Twillo: 25"
                role="graphics-document"
                r="53.71017235125532"
                cx="239.67687163817263"
                cy="58.57189098204239"
        >
        </circle>
        <linearGradient spreadmethod="pad"
                        id="gradient-gradient_series_Twillo_bubble"
                        x1="10%"
                        x2="10%"
                        y1="100%"
                        y2="0%"
        >
          <stop offset="0%"
                stop-opacity="0.3"
                stop-color="#2aa1d1"
          >
          </stop>
          <stop offset="80%"
                stop-opacity="1"
                stop-color="#2aa1d1"
          >
          </stop>
        </linearGradient>
        <text id="gradient_series_Twillo_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(239.677px) translateY(58.5719px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Twillo
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Bubble Chart Icons smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="450"
     height="450"
     style="height: 450px; width: 450px;"
>
  <svg width="450"
       height="450"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(10, 10)">
      <g opacity="1"
         transform-origin="120.09717559814453px 170.89130401611328px"
         style="transform: none; transform-origin: 120.097px 170.891px;"
      >
        <circle id="icons_series_AWS_bubble-bubble"
                fill="#2d60e8"
                tabindex="0"
                aria-label="AWS: 100"
                role="graphics-document"
                r="107.42034470251065"
                cx="120.09717456604396"
                cy="170.891309886955"
        >
        </circle>
        <g style="transform: translate(120.097px, 170.891px);">
          <g>
            <foreignObject height="40"
                           width="40"
                           x="-20"
                           y="-25"
            >
              <svg fill="white"
                   viewbox="0 0 40 40"
                   style="width: 100%; height: 100%;"
              >
                <path d="M14.29,19.84a7.1,7.1,0,0,1-.3-.67,3.08,3.08,0,0,1-.1-.83h0v-3A3.09,3.09,0,0,0,13.1,13a3.41,3.41,0,0,0-2.44-.76,5.65,5.65,0,0,0-1.45.18A5.22,5.22,0,0,0,8,12.87a.73.73,0,0,0-.26.2.62.62,0,0,0-.06.32v.46c0,.19.06.29.19.29l.15,0L8.38,14a8.32,8.32,0,0,1,1-.32,4.49,4.49,0,0,1,1-.12,2.14,2.14,0,0,1,1.52.43,2.06,2.06,0,0,1,.43,1.49v.68c-.37-.09-.72-.16-1.07-.21a8.52,8.52,0,0,0-1-.07A3.34,3.34,0,0,0,8,16.6a2.37,2.37,0,0,0-.85,1.91,2.37,2.37,0,0,0,.69,1.79A2.53,2.53,0,0,0,9.71,21a3.46,3.46,0,0,0,2.74-1.28,5.51,5.51,0,0,0,.29.55,2.6,2.6,0,0,0,.33.43.4.4,0,0,0,.28.13.38.38,0,0,0,.24-.08l.59-.39a.32.32,0,0,0,.11-.49Zm-1.93-2.26a3.12,3.12,0,0,1-.09.81A1.52,1.52,0,0,1,12,19a2.17,2.17,0,0,1-.88.6,3.06,3.06,0,0,1-1,.16,1.38,1.38,0,0,1-.87-2.4A2.18,2.18,0,0,1,10.63,17c.29,0,.58,0,.88.05s.58.1.85.16ZM17,20.3a.78.78,0,0,0,.19.37.58.58,0,0,0,.36.09h.8a.59.59,0,0,0,.37-.09.74.74,0,0,0,.18-.38l1.43-6,1.45,6a.61.61,0,0,0,.17.37.56.56,0,0,0,.38.1h.8a.56.56,0,0,0,.35-.1.72.72,0,0,0,.2-.36L26,13.11a.65.65,0,0,0,.06-.23.89.89,0,0,0,0-.15.2.2,0,0,0-.23-.23h-.87a.68.68,0,0,0-.36.09.84.84,0,0,0-.18.36l-1.62,6.24L21.31,13a.64.64,0,0,0-.17-.36.62.62,0,0,0-.38-.09H20a.47.47,0,0,0-.55.45L18,19.12,16.45,13a.8.8,0,0,0-.18-.36.57.57,0,0,0-.37-.09H15c-.15,0-.22.08-.22.23a1.28,1.28,0,0,0,.08.37Zm10,.17a4.07,4.07,0,0,0,1.07.37,6.28,6.28,0,0,0,1.43.17,4.48,4.48,0,0,0,1.34-.2,2.86,2.86,0,0,0,1-.52,2.45,2.45,0,0,0,.68-.82,2.35,2.35,0,0,0,.24-1.08,2.09,2.09,0,0,0-.43-1.3A2.81,2.81,0,0,0,31,16.2l-1.32-.42a2.76,2.76,0,0,1-1-.52.89.89,0,0,1-.28-.66.91.91,0,0,1,.44-.83A2.49,2.49,0,0,1,30,13.51a4.15,4.15,0,0,1,1.79.37,1.08,1.08,0,0,0,.35.11c.14,0,.22-.1.22-.3v-.44a.45.45,0,0,0-.09-.3.76.76,0,0,0-.28-.24,2.6,2.6,0,0,0-.39-.17c-.17,0-.34-.1-.53-.14l-.6-.11-.63,0a4.08,4.08,0,0,0-1.17.15,3.05,3.05,0,0,0-1,.49,2.33,2.33,0,0,0-.67.76,2.05,2.05,0,0,0-.25,1,2.27,2.27,0,0,0,.46,1.35,2.88,2.88,0,0,0,1.49.95l1.35.42a2.12,2.12,0,0,1,.94.48.91.91,0,0,1,.26.65,1,1,0,0,1-.49.89,2.56,2.56,0,0,1-1.36.3,5.29,5.29,0,0,1-1.11-.11,4.85,4.85,0,0,1-1-.32l-.23-.1-.17,0c-.14,0-.22.1-.22.29V20a.62.62,0,0,0,.06.26A.69.69,0,0,0,27.05,20.47Zm3.82,4.36A27.71,27.71,0,0,1,20.3,27,28,28,0,0,1,6.44,23.31c-.34-.2-.6.15-.32.41A20.52,20.52,0,0,0,20,29a20.08,20.08,0,0,0,11.34-3.46C31.82,25.16,31.38,24.6,30.87,24.83Zm3-1.75c-.33-.41-3.21-.77-5,.46-.27.2-.22.46.07.42,1-.12,3.2-.38,3.59.12s-.44,2.57-.81,3.5c-.11.27.13.39.38.17C33.8,26.37,34.23,23.5,33.89,23.08Z">
                </path>
              </svg>
            </foreignObject>
            <text dy="35"
                  fill="white"
                  text-anchor="middle"
            >
              AWS
            </text>
          </g>
        </g>
      </g>
      <g opacity="1"
         transform-origin="302.5045623779297px 170.89131927490234px"
         style="transform: none; transform-origin: 302.505px 170.891px;"
      >
        <circle id="icons_series_SendGrid_bubble-bubble"
                fill="#2c77e0"
                tabindex="0"
                aria-label="SendGrid: 45"
                role="graphics-document"
                r="72.05975787638198"
                cx="302.5045420309472"
                cy="170.891309886955"
        >
        </circle>
        <g style="transform: translate(302.505px, 170.891px);">
          <g>
            <foreignObject height="40"
                           width="40"
                           x="-20"
                           y="-25"
            >
              <svg viewbox="0 0 256 256"
                   version="1.1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   preserveaspectratio="xMidYMid"
                   style="width: 100%; height: 100%;"
              >
                <g>
                  <polygon fill="#9DE1F3"
                           points="85.3335 85.333 0.0005 85.333 0.0005 170.666 0.0005 256 85.3335 256 170.6665 256 170.6665 170.666 170.6665 85.333"
                  >
                  </polygon>
                  <polygon fill="#27B4E1"
                           points="85.3335 0.0004 85.3335 85.3334 85.3335 170.6664 170.6665 170.6664 255.9995 170.6664 255.9995 0.0004"
                  >
                  </polygon>
                  <polygon fill="#1A82E2"
                           points="0 256 85.333 256 85.333 170.667 0 170.667"
                  >
                  </polygon>
                  <polygon fill="#1A82E2"
                           points="170.667 85.333 256 85.333 256 0 170.667 0"
                  >
                  </polygon>
                  <polygon fill="#239FD7"
                           points="85.334 170.667 170.667 170.667 170.667 85.334 85.334 85.334"
                  >
                  </polygon>
                </g>
              </svg>
            </foreignObject>
            <text dy="35"
                  fill="white"
                  text-anchor="middle"
            >
              SendGrid
            </text>
          </g>
        </g>
      </g>
      <g opacity="1"
         transform-origin="247.29898071289062px 329.57855224609375px"
         style="transform: none; transform-origin: 247.299px 329.579px;"
      >
        <circle id="icons_series_Okta_bubble-bubble"
                fill="#2b8dd8"
                tabindex="0"
                aria-label="Okta: 75"
                role="graphics-document"
                r="93.02874739565539"
                cx="247.29897542739963"
                cy="329.57856343235886"
        >
        </circle>
        <g style="transform: translate(247.299px, 329.579px);">
          <g>
            <foreignObject height="40"
                           width="40"
                           x="-20"
                           y="-25"
            >
              <svg enable-background="new 0 0 24 24"
                   viewbox="0 0 24 24"
                   fill="white"
                   style="width: 100%; height: 100%;"
              >
                <path d="M12,2L12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10C22,6.5,17.5,2,12,2z M17,12c0,2.8-2.2,5-5,5c-2.8,0-5-2.2-5-5c0-2.8,2.2-5,5-5C14.8,7,17,9.2,17,12L17,12z">
                </path>
              </svg>
            </foreignObject>
            <text dy="35"
                  fill="white"
                  text-anchor="middle"
            >
              Okta
            </text>
          </g>
        </g>
      </g>
      <g opacity="1"
         transform-origin="239.6768569946289px 58.5718879699707px"
         style="transform: none; transform-origin: 239.677px 58.5719px;"
      >
        <circle id="icons_series_Twillo_bubble-bubble"
                fill="#2aa1d1"
                tabindex="0"
                aria-label="Twillo: 25"
                role="graphics-document"
                r="53.71017235125532"
                cx="239.67687163817263"
                cy="58.57189098204239"
        >
        </circle>
        <g style="transform: translate(239.677px, 58.5719px);">
          <g>
            <foreignObject height="40"
                           width="40"
                           x="-20"
                           y="-25"
            >
              <svg fill="#F22F46"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 30 30"
                   style="width: 100%; height: 100%;"
              >
                <path d="M15 0C6.7 0 0 6.7 0 15s6.7 15 15 15 15-6.7 15-15S23.3 0 15 0zm0 26C8.9 26 4 21.1 4 15S8.9 4 15 4s11 4.9 11 11-4.9 11-11 11zm6.8-14.7c0 1.7-1.4 3.1-3.1 3.1s-3.1-1.4-3.1-3.1 1.4-3.1 3.1-3.1 3.1 1.4 3.1 3.1zm0 7.4c0 1.7-1.4 3.1-3.1 3.1s-3.1-1.4-3.1-3.1c0-1.7 1.4-3.1 3.1-3.1s3.1 1.4 3.1 3.1zm-7.4 0c0 1.7-1.4 3.1-3.1 3.1s-3.1-1.4-3.1-3.1c0-1.7 1.4-3.1 3.1-3.1s3.1 1.4 3.1 3.1zm0-7.4c0 1.7-1.4 3.1-3.1 3.1S8.2 13 8.2 11.3s1.4-3.1 3.1-3.1 3.1 1.4 3.1 3.1z">
                </path>
              </svg>
            </foreignObject>
            <text dy="35"
                  fill="white"
                  text-anchor="middle"
            >
              Twillo
            </text>
          </g>
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Bubble Chart LongText smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="450"
     height="450"
     style="height: 450px; width: 450px;"
>
  <svg width="450"
       height="450"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(10, 10)">
      <g opacity="1"
         transform-origin="104.74876403808594px 160.02061462402344px"
         style="transform: none; transform-origin: 104.749px 160.021px;"
      >
        <circle id="long_text_series_Department_of_Curtains_and_Interior_Design_bubble-bubble"
                fill="#2d60e8"
                tabindex="0"
                aria-label="Department of Curtains and Interior Design: 100"
                role="graphics-document"
                r="126.04122859409124"
                cx="128.97972517723477"
                cy="215"
        >
        </circle>
        <text id="long_text_series_Department_of_Curtains_and_Interior_Design_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(128.98px) translateY(215px); transform-origin: 0px 3.04834px;"
              transform-origin="0px 3.04833984375px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="-8"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Department of
          </tspan>
          <tspan dominant-baseline="alphabetic"
                 dy="16"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Curtains and
          </tspan>
          <tspan dominant-baseline="alphabetic"
                 dy="16"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Interior Design
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="196.60496520996094px 135.2755126953125px"
         style="transform: none; transform-origin: 196.605px 135.276px;"
      >
        <circle id="long_text_series_Fresh_Kitchen_Pasta_Dish_and_Pizza_bubble-bubble"
                fill="#2c77e0"
                tabindex="0"
                aria-label="Fresh Kitchen Pasta Dish and Pizza: 45"
                role="graphics-document"
                r="84.55102653119349"
                cx="342.510476885663"
                cy="215"
        >
        </circle>
        <text id="long_text_series_Fresh_Kitchen_Pasta_Dish_and_Pizza_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(342.51px) translateY(215px); transform-origin: 0px 3px;"
              transform-origin="0px 3px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="-16"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Fresh
          </tspan>
          <tspan dominant-baseline="alphabetic"
                 dy="16"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Kitchen
          </tspan>
          <tspan dominant-baseline="alphabetic"
                 dy="16"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Pasta Dish
          </tspan>
          <tspan dominant-baseline="alphabetic"
                 dy="16"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            and Pizza
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="156.68093872070312px 198.1848602294922px"
         style="transform: none; transform-origin: 156.681px 198.185px;"
      >
        <circle id="long_text_series_Short_Name_bubble-bubble"
                fill="#2b8dd8"
                tabindex="0"
                aria-label="Short Name: 25"
                role="graphics-document"
                r="63.02061429704562"
                cx="269.02093783937204"
                cy="346.3491115857163"
        >
        </circle>
        <text id="long_text_series_Short_Name_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(269.021px) translateY(346.349px); transform-origin: 0px 3px;"
              transform-origin="0px 3px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="0"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Short
          </tspan>
          <tspan dominant-baseline="alphabetic"
                 dy="16"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Name
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Bubble Chart Mask smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="450"
     height="450"
     style="height: 450px; width: 450px;"
>
  <svg width="450"
       height="450"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(10, 10)">
      <g opacity="1"
         transform-origin="105.91110229492188px 134.15582275390625px"
         style="transform: none; transform-origin: 105.911px 134.156px;"
      >
        <circle id="mask_series_AWS_bubble-bubble"
                fill="url(#mask-pattern-mask_series_AWS_bubble)"
                tabindex="0"
                aria-label="AWS: 100"
                role="graphics-document"
                r="107.42034470251065"
                cx="120.09717456604396"
                cy="170.891309886955"
        >
        </circle>
        <mask id="mask-mask_series_AWS_bubble">
          <rect x="0"
                y="0"
                width="100%"
                height="100%"
                fill="url(#gradient-mask_series_AWS_bubble)"
          >
          </rect>
        </mask>
        <pattern id="mask-pattern-mask_series_AWS_bubble"
                 width="4"
                 height="4"
                 patternunits="userSpaceOnUse"
                 patterntransform="rotate(45)"
        >
          <rect class="area-stripe"
                width="1"
                height="4"
                fill="#2d60e8"
          >
          </rect>
        </pattern>
        <text id="mask_series_AWS_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(120.097px) translateY(170.891px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            AWS
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="172.49310302734375px 116.47554016113281px"
         style="transform: none; transform-origin: 172.493px 116.476px;"
      >
        <circle id="mask_series_SendGrid_bubble-bubble"
                fill="url(#mask-pattern-mask_series_SendGrid_bubble)"
                tabindex="0"
                aria-label="SendGrid: 45"
                role="graphics-document"
                r="72.05975787638198"
                cx="302.5045420309472"
                cy="170.891309886955"
        >
        </circle>
        <mask id="mask-mask_series_SendGrid_bubble">
          <rect x="0"
                y="0"
                width="100%"
                height="100%"
                fill="url(#gradient-mask_series_SendGrid_bubble)"
          >
          </rect>
        </mask>
        <pattern id="mask-pattern-mask_series_SendGrid_bubble"
                 width="4"
                 height="4"
                 patternunits="userSpaceOnUse"
                 patterntransform="rotate(45)"
        >
          <rect class="area-stripe"
                width="1"
                height="4"
                fill="#2c77e0"
          >
          </rect>
        </pattern>
        <text id="mask_series_SendGrid_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(302.505px) translateY(170.891px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            SendGrid
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="162.7693328857422px 206.30364990234375px"
         style="transform: none; transform-origin: 162.769px 206.304px;"
      >
        <circle id="mask_series_Okta_bubble-bubble"
                fill="url(#mask-pattern-mask_series_Okta_bubble)"
                tabindex="0"
                aria-label="Okta: 75"
                role="graphics-document"
                r="93.02874739565539"
                cx="247.29897542739963"
                cy="329.57856343235886"
        >
        </circle>
        <mask id="mask-mask_series_Okta_bubble">
          <rect x="0"
                y="0"
                width="100%"
                height="100%"
                fill="url(#gradient-mask_series_Okta_bubble)"
          >
          </rect>
        </mask>
        <pattern id="mask-pattern-mask_series_Okta_bubble"
                 width="4"
                 height="4"
                 patternunits="userSpaceOnUse"
                 patterntransform="rotate(45)"
        >
          <rect class="area-stripe"
                width="1"
                height="4"
                fill="#2b8dd8"
          >
          </rect>
        </pattern>
        <text id="mask_series_Okta_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(247.299px) translateY(329.579px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Okta
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="137.93960571289062px 51.141029357910156px"
         style="transform: none; transform-origin: 137.94px 51.141px;"
      >
        <circle id="mask_series_Twillo_bubble-bubble"
                fill="url(#mask-pattern-mask_series_Twillo_bubble)"
                tabindex="0"
                aria-label="Twillo: 25"
                role="graphics-document"
                r="53.71017235125532"
                cx="239.67687163817263"
                cy="58.57189098204239"
        >
        </circle>
        <mask id="mask-mask_series_Twillo_bubble">
          <rect x="0"
                y="0"
                width="100%"
                height="100%"
                fill="url(#gradient-mask_series_Twillo_bubble)"
          >
          </rect>
        </mask>
        <pattern id="mask-pattern-mask_series_Twillo_bubble"
                 width="4"
                 height="4"
                 patternunits="userSpaceOnUse"
                 patterntransform="rotate(45)"
        >
          <rect class="area-stripe"
                width="1"
                height="4"
                fill="#2aa1d1"
          >
          </rect>
        </pattern>
        <text id="mask_series_Twillo_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(239.677px) translateY(58.5719px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Twillo
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Bubble Chart NoAnimation smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="450"
     height="450"
     style="height: 450px; width: 450px;"
>
  <svg width="450"
       height="450"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(10, 10)">
      <g opacity="1"
         transform-origin="105.91110229492188px 134.15582275390625px"
         style="transform: none; transform-origin: 105.911px 134.156px;"
      >
        <circle id="no_animation_series_AWS_bubble-bubble"
                fill="#2d60e8"
                tabindex="0"
                aria-label="AWS: 100"
                role="graphics-document"
                r="107.42034470251065"
                cx="120.09717456604396"
                cy="170.891309886955"
        >
        </circle>
        <text id="no_animation_series_AWS_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(120.097px) translateY(170.891px); transform-origin: 0px -2px;"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            AWS
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="172.49310302734375px 116.47554016113281px"
         style="transform: none; transform-origin: 172.493px 116.476px;"
      >
        <circle id="no_animation_series_SendGrid_bubble-bubble"
                fill="#2c77e0"
                tabindex="0"
                aria-label="SendGrid: 45"
                role="graphics-document"
                r="72.05975787638198"
                cx="302.5045420309472"
                cy="170.891309886955"
        >
        </circle>
        <text id="no_animation_series_SendGrid_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(302.505px) translateY(170.891px); transform-origin: 0px -2px;"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            SendGrid
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="162.7693328857422px 206.30364990234375px"
         style="transform: none; transform-origin: 162.769px 206.304px;"
      >
        <circle id="no_animation_series_Okta_bubble-bubble"
                fill="#2b8dd8"
                tabindex="0"
                aria-label="Okta: 75"
                role="graphics-document"
                r="93.02874739565539"
                cx="247.29897542739963"
                cy="329.57856343235886"
        >
        </circle>
        <text id="no_animation_series_Okta_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(247.299px) translateY(329.579px); transform-origin: 0px -2px;"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Okta
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="137.93960571289062px 51.141029357910156px"
         style="transform: none; transform-origin: 137.94px 51.141px;"
      >
        <circle id="no_animation_series_Twillo_bubble-bubble"
                fill="#2aa1d1"
                tabindex="0"
                aria-label="Twillo: 25"
                role="graphics-document"
                r="53.71017235125532"
                cx="239.67687163817263"
                cy="58.57189098204239"
        >
        </circle>
        <text id="no_animation_series_Twillo_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(239.677px) translateY(58.5719px); transform-origin: 0px -2px;"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Twillo
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Bubble Chart Simple smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="450"
     height="450"
     style="height: 450px; width: 450px;"
>
  <svg width="450"
       height="450"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(10, 10)">
      <g opacity="1"
         transform-origin="105.91110229492188px 134.15582275390625px"
         style="transform: none; transform-origin: 105.911px 134.156px;"
      >
        <circle id="simple_series_AWS_bubble-bubble"
                fill="#2d60e8"
                tabindex="0"
                aria-label="AWS: 100"
                role="graphics-document"
                r="107.42034470251065"
                cx="120.09717456604396"
                cy="170.891309886955"
        >
        </circle>
        <text id="simple_series_AWS_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(120.097px) translateY(170.891px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            AWS
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="172.49310302734375px 116.47554016113281px"
         style="transform: none; transform-origin: 172.493px 116.476px;"
      >
        <circle id="simple_series_SendGrid_bubble-bubble"
                fill="#2c77e0"
                tabindex="0"
                aria-label="SendGrid: 45"
                role="graphics-document"
                r="72.05975787638198"
                cx="302.5045420309472"
                cy="170.891309886955"
        >
        </circle>
        <text id="simple_series_SendGrid_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(302.505px) translateY(170.891px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            SendGrid
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="162.7693328857422px 206.30364990234375px"
         style="transform: none; transform-origin: 162.769px 206.304px;"
      >
        <circle id="simple_series_Okta_bubble-bubble"
                fill="#2b8dd8"
                tabindex="0"
                aria-label="Okta: 75"
                role="graphics-document"
                r="93.02874739565539"
                cx="247.29897542739963"
                cy="329.57856343235886"
        >
        </circle>
        <text id="simple_series_Okta_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(247.299px) translateY(329.579px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Okta
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="137.93960571289062px 51.141029357910156px"
         style="transform: none; transform-origin: 137.94px 51.141px;"
      >
        <circle id="simple_series_Twillo_bubble-bubble"
                fill="#2aa1d1"
                tabindex="0"
                aria-label="Twillo: 25"
                role="graphics-document"
                r="53.71017235125532"
                cx="239.67687163817263"
                cy="58.57189098204239"
        >
        </circle>
        <text id="simple_series_Twillo_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(239.677px) translateY(58.5719px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Twillo
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Bubble Chart VaryingSizes smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="450"
     height="450"
     style="height: 450px; width: 450px;"
>
  <svg width="450"
       height="450"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(10, 10)">
      <g opacity="1"
         transform-origin="95.74934387207031px 115.34292602539062px"
         style="transform: none; transform-origin: 95.7493px 115.343px;"
      >
        <circle id="varying_sizes_series_0_bubble-bubble"
                fill="#2d60e8"
                tabindex="0"
                aria-label="0: 100"
                role="graphics-document"
                r="10.675932063909077"
                cx="184.72119043726556"
                cy="230.00992379259912"
        >
        </circle>
        <text id="varying_sizes_series_0_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(184.721px) translateY(230.01px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            0
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="114.08084106445312px 118.44502258300781px"
         style="transform: none; transform-origin: 114.081px 118.445px;"
      >
        <circle id="varying_sizes_series_1_bubble-bubble"
                fill="#2c77e0"
                tabindex="0"
                aria-label="1: 250"
                role="graphics-document"
                r="16.880130733587485"
                cx="215.17999819524258"
                cy="230.00992379259912"
        >
        </circle>
        <text id="varying_sizes_series_1_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(215.18px) translateY(230.01px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            1
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="104.82855224609375px 137.74075317382812px"
         style="transform: none; transform-origin: 104.829px 137.741px;"
      >
        <circle id="varying_sizes_series_2_bubble-bubble"
                fill="#2b8dd8"
                tabindex="0"
                aria-label="2: 400"
                role="graphics-document"
                r="21.351864127818153"
                cx="192.2036706878236"
                cy="264.1296423507303"
        >
        </circle>
        <text id="varying_sizes_series_2_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(192.204px) translateY(264.13px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            2
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="107.1643295288086px 103.4593276977539px"
         style="transform: none; transform-origin: 107.164px 103.459px;"
      >
        <circle id="varying_sizes_series_3_bubble-bubble"
                fill="#2aa1d1"
                tabindex="0"
                aria-label="3: 650"
                role="graphics-document"
                r="27.21839295983164"
                cx="191.00870893277343"
                cy="189.70027196495258"
        >
        </circle>
        <text id="varying_sizes_series_3_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(191.009px) translateY(189.7px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            3
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="134.4542236328125px 143.12469482421875px"
         style="transform: none; transform-origin: 134.454px 143.125px;"
      >
        <circle id="varying_sizes_series_4_bubble-bubble"
                fill="#29b5ca"
                tabindex="0"
                aria-label="4: 700"
                role="graphics-document"
                r="28.24586125492394"
                cx="244.56102253180669"
                cy="268.0035414388524"
        >
        </circle>
        <text id="varying_sizes_series_4_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(244.561px) translateY(268.004px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            4
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="143.149658203125px 109.1170654296875px"
         style="transform: none; transform-origin: 143.15px 109.117px;"
      >
        <circle id="varying_sizes_series_5_bubble-bubble"
                fill="#28c8c3"
                tabindex="0"
                aria-label="5: 1,050"
                role="graphics-document"
                r="34.59397371000649"
                cx="255.60377810290976"
                cy="193.6401593021618"
        >
        </circle>
        <text id="varying_sizes_series_5_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(255.604px) translateY(193.64px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            5
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="84.32733154296875px 132.6201171875px"
         style="transform: none; transform-origin: 84.3273px 132.62px;"
      >
        <circle id="varying_sizes_series_6_bubble-bubble"
                fill="#27dcbc"
                tabindex="0"
                aria-label="6: 1,000"
                role="graphics-document"
                r="33.76026146717497"
                cx="138.79283914494766"
                cy="241.47995627195903"
        >
        </circle>
        <text id="varying_sizes_series_6_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(138.793px) translateY(241.48px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            6
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="80.62825012207031px 98.07455444335938px"
         style="transform: none; transform-origin: 80.6283px 98.0746px;"
      >
        <circle id="varying_sizes_series_7_bubble-bubble"
                fill="#26efb5"
                tabindex="0"
                aria-label="7: 1,450"
                role="graphics-document"
                r="40.652738146174464"
                cx="124.5022160370855"
                cy="165.49638929728522"
        >
        </circle>
        <text id="varying_sizes_series_7_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(124.502px) translateY(165.496px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            7
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="172.61968994140625px 137.2619171142578px"
         style="transform: none; transform-origin: 172.62px 137.262px;"
      >
        <circle id="varying_sizes_series_8_bubble-bubble"
                fill="#2d60e8"
                tabindex="0"
                aria-label="8: 1,300"
                role="graphics-document"
                r="38.492620469794275"
                cx="310.64519057474786"
                cy="246.03121365385104"
        >
        </circle>
        <text id="varying_sizes_series_8_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(310.645px) translateY(246.031px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            8
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="122.86528015136719px 184.6361541748047px"
         style="transform: none; transform-origin: 122.865px 184.636px;"
      >
        <circle id="varying_sizes_series_9_bubble-bubble"
                fill="#2c77e0"
                tabindex="0"
                aria-label="9: 1,850"
                role="graphics-document"
                r="45.9189200712978"
                cx="203.7100619536995"
                cy="333.35338939427965"
        >
        </circle>
        <text id="varying_sizes_series_9_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(203.71px) translateY(333.353px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            9
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="74.30664825439453px 174.73941040039062px"
         style="transform: none; transform-origin: 74.3066px 174.739px;"
      >
        <circle id="varying_sizes_series_10_bubble-bubble"
                fill="#2b8dd8"
                tabindex="0"
                aria-label="10: 1,600"
                role="graphics-document"
                r="42.70372825563631"
                cx="113.69862905321732"
                cy="316.77510348716885"
        >
        </circle>
        <text id="varying_sizes_series_10_label-text"
              fill="#ffffff"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(113.699px) translateY(316.775px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            10
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="130.89218139648438px 77.18616485595703px"
         style="transform: none; transform-origin: 130.892px 77.1862px;"
      >
        <circle id="varying_sizes_series_11_bubble-bubble"
                fill="#2aa1d1"
                tabindex="0"
                aria-label="11: 2,250"
                role="graphics-document"
                r="50.640392200762456"
                cx="218.41740684989514"
                cy="113.73193628497864"
        >
        </circle>
        <text id="varying_sizes_series_11_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(218.417px) translateY(113.732px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            11
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="82.35494995117188px 55.97637939453125px"
         style="transform: none; transform-origin: 82.3549px 55.9764px;"
      >
        <circle id="varying_sizes_series_12_bubble-bubble"
                fill="#29b5ca"
                tabindex="0"
                aria-label="12: 1,900"
                role="graphics-document"
                r="46.53530899468528"
                cx="125.96365813299532"
                cy="75.41745164564989"
        >
        </circle>
        <text id="varying_sizes_series_12_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(125.964px) translateY(75.4175px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            12
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="177.13504028320312px 193.638427734375px"
         style="transform: none; transform-origin: 177.135px 193.638px;"
      >
        <circle id="varying_sizes_series_13_bubble-bubble"
                fill="#28c8c3"
                tabindex="0"
                aria-label="13: 2,650"
                role="graphics-document"
                r="54.957723970155925"
                cx="307.10144153023543"
                cy="342.3191136190954"
        >
        </circle>
        <text id="varying_sizes_series_13_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(307.101px) translateY(342.319px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            13
          </tspan>
        </text>
      </g>
      <g opacity="1"
         transform-origin="47.8317985534668px 133.23193359375px"
         style="transform: none; transform-origin: 47.8318px 133.232px;"
      >
        <circle id="varying_sizes_series_14_bubble-bubble"
                fill="#27dcbc"
                tabindex="0"
                aria-label="14: 2,200"
                role="graphics-document"
                r="50.07456000336341"
                cx="53.3781024606441"
                cy="226.3892906959651"
        >
        </circle>
        <text id="varying_sizes_series_14_label-text"
              fill="#000000"
              text-anchor="middle"
              style="pointer-events: none; font-family: sans-serif; font-size: 14px; transform: translateX(53.3781px) translateY(226.389px); transform-origin: 0px -2px;"
              transform-origin="0px -2px"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="3"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            14
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;
